test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_fractional_number.sol
contract A layout at 3/2 {}
contract B layout at 4.2 {}
contract C layout at .1 {}
contract D layout at 42e-10 {}
contract E layout at 1_7e-10 {}
// ----
// UnimplementedFeatureError 1834: (0-27): Code generation is not supported for contracts with specified storage layout base.
